tests/regression/errors/basic/undefined_var_17.csd
// Undefined variable test 17
vibez.spill("Using undefined:", undefined_var_17)
sus result drip = missing_variable + 17
